ajout d'une note

--- a/hello.html
+++ b/hello.html
@@ -14,8 +14,11 @@
 
 		<!-- TITRE -->
 		<div id="top-banner">
-			Bienvenue dans cette formation GIT !
+			Bienvenue dans la rubrique de Sébastien !
 		</div>
 		
+		<div>
+			<p> Présentation des outils et des notes de travail </p>
+		</div>
 	
 </body></html>
