ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -16,7 +16,19 @@
 		<div id="top-banner">
 			Bienvenue dans la rubrique de Sébastien !
 		</div>
-		
+
+		<!-- description -->
+		<div>
+			<h1> Ma description </h1>
+			<p> Bonjour, je m'appelle Bass et je suis un winner Cdt, </p>
+		</div>
+
+                <!-- recompense -->
+                <div>
+                        <h1> Mes recompenses </h1>
+			<p> en construction </p>
+                </div>
+	
 		<div>
 			<p> Présentation des outils et des notes de travail </p>
 		</div>
