ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -23,14 +23,21 @@
 			<p> Bonjour, je m'appelle Bass et je suis un winner Cdt, </p>
 		</div>
 
-                <!-- recompense -->
-                <div>
-                        <h1> Mes recompenses </h1>
+        <!-- recompense -->
+		<div>
+            <h1> Mes recompenses </h1>
 			<p> en construction </p>
-                </div>
+        </div>
 	
 		<div>
 			<p> Présentation des outils et des notes de travail </p>
 		</div>
-	
+
+        <!-- mon gist -->
+		<div>
+            <h1> Mon gist </h1>
+			<p> <script src="https://gist.github.com/Bassdream/c8d502c228e1a248555cc6e320a7cdd0.js"></script> </p>
+        </div>
+
+
 </body></html>
