--- a/hello.html
+++ b/hello.html
@@ -39,5 +39,11 @@
 			<p> <script src="https://gist.github.com/Bassdream/c8d502c228e1a248555cc6e320a7cdd0.js"></script> </p>
         </div>
 
+        <!-- command git -->
+		<div>
+            <h1> Command git </h1>
+			<p> git pull </p>
+			<p> git push </p>
+        </div>
 
 </body></html>
